# Boater

./: .env  .gitignore  README.md  config.toml
backend/: Cargo.toml  Rocket.toml
backend/src/: main.rs
bot/: build.gradle.kts  settings.gradle.kts
bot/src/main/kotlin/com/endrf/boater/: BoaterActionRow.kt  BoaterAudioSendHandler.kt  BoaterCommand.kt  Bot.kt  BotMusicManager.kt  InteractionListener.kt  MusicApiResponse.kt  MusicQueue.kt  PlaylistContainer.kt  UserInteraction.kt
bot/src/main/kotlin/com/endrf/boater/buttons/: CancelButton.kt  NowPlayingActionRows.kt
bot/src/main/kotlin/com/endrf/boater/commands/: PauseCommand.kt  PingCommand.kt  PlayCommand.kt  QueueCommand.kt  ResumeCommand.kt  SkipCommand.kt  StopCommand.kt  VolumeCommand.kt
bot/src/main/kotlin/com/endrf/boater/config/: Config.kt
bot/src/main/kotlin/com/endrf/boater/embeds/: ErrorEmbed.kt  LoadingEmbed.kt  NowPlayingEmbed.kt  QueueListEmbed.kt  TrackAddEmbed.kt
bot/src/main/sqldelight/com/endrf/boater/: playlists.sq  songs.sq  users.sq
frontend/: Cargo.toml  Trunk.toml  esbuild.js  index.html  input.css  package-lock.json  package.js  package.json  tailwind.config.js
frontend/src/: home.rs  main.rs  package.js
frontend/src/components/: generic_playlist.rs  modal.rs  navbar.rs  player.rs
frontend/src/lib/: api.rs  security.rs  util.rs  websocket.rs
frontend/src/routes/: not_found.rs
frontend/src/routes/guild/: mod.rs  page.rs
frontend/src/routes/guild/playlists/: add.rs  mod.rs  page.rs  saved.rs  search.rs
frontend/src/routes/guild/settings/: appearance.rs  mod.rs  status.rs
(+5 files in other folders)
