[package]
name = "boater-app-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
rocket = { version = "0.5.1", features = ["json"] }
rocket_ws = "0.1.1"
rocket_async_compression = "0.6.0"
tokio = "1.37.0"
serde = { version = "1.0.202", features = ["derive"] }
reqwest = { version = "0.12.4", default-features = false, features = ["json", "default-tls", "charset"] }
serde_json = "1.0.117"
dotenv = "0.15.0"
lazy_static = "1.4.0"
async-std = "1.12.0"
figment = "0.10.19"
